--- a/css/_adaptive.scss
+++ b/css/_adaptive.scss
@@ -40,6 +40,8 @@
 		&__text {
 			font-size: 0.875rem;
 			line-height: 157%;
+			max-width: 480px;
+			margin: 0 auto;
 		}
 	}
 
@@ -55,6 +57,7 @@
 			font-size: 0.875rem;
 			line-height: 157%;
 			padding-bottom: 32px;
+			margin: 0 auto;
 		}
 		&__button {
 			margin: 0 auto;
